Added img folder and style.css, plus modified README.md and index.html

--- a/index.html
+++ b/index.html
@@ -2,10 +2,65 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
         <title>S's Landing Page</title>
     </head>
 
     <body>
-        
+        <div class="jeder">
+            <div class="logo">Header logo</div>
+            <div class="links">
+                <ul>
+                    <li><a href="google.com">header link one</a></li>
+                    <li><a href="twitter.com">header link two</a></li>
+                    <li><a href="last.fm">header link three</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="sec1">
+                <div class="noim">
+                    <div class="up">This website is<br>awesome</div>
+                        <div class="low">This website has some subtext that goes here under the<br>main title. It's a smaller font and the color is lower<br>contrast</div>
+                            <button class="sign1">Sign up</button>
+                </div>
+                    <img class="mtn" src="./img/pexels-pixabay-417173.jpg" alt="Mountain by Pixabay">
+        </div>
+        <div class="sec2">
+            <div class="titu2">Some random information.</div>
+            <div class="conte">
+                <div class="info">
+                <img class="sea" src="./img/pexels-josh-sorenson-831890.jpg" alt="Sea by Josh Sorenson">
+                    <div class="texts">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                <img class="sea" src="./img/pexels-josh-sorenson-831890.jpg" alt="Sea by Josh Sorenson">
+                    <div class="texts">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                <img class="sea" src="./img/pexels-josh-sorenson-831890.jpg" alt="Sea by Josh Sorenson">
+                    <div class="texts">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                <img class="sea" src="./img/pexels-josh-sorenson-831890.jpg" alt="Sea by Josh Sorenson">
+                    <div class="texts">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+        </div>
+        <div class="sec3">
+            <div class="quote">This is an inspiring quote, or a testimonial from a<br>customer. Maybe it's just filling up space, or maybe<br>people will actually read it. Who know? All I know<br>is that it looks nice.</div>
+            <br>
+            <div class="autor">-Thor, God of Thunder</div>
+        </div>
+        <div class="sec4">
+            <div class="modal">
+                <div class="container">
+                    <div class="supe"> Call to action! It's time!
+                        <div class="infe">Sign up for our product by clicking that button right over there!</div>
+                    </div>
+                    <button class="sign2">Sign Up</button>
+                </div>
+            </div>
+        </div>
+        <div class="futer">Copyright © The Odin Project 2022</div>
     </body>
 </html>
